# selenium-twitter-scraper

./: .gitignore  TODO.md  pyproject.toml
scraper/: __main__.py  twitter_scraper.py
